[package]
name = "threshold_opaque"
version = "0.1.0"
authors = ["Merry Mou <moumerry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.10.1"
curve25519-dalek = { version = "1.2.3" }
digest = "0.8.1"
generic-array = "0.12.3"
sha2 = { version = "0.8.0" }
snow = { version = "0.6.1" }
sodiumoxide = "0.2.4"
rand_core = { version = "0.5.1", default-features = false }
rand = { version = "0.6.0" }

[features]
default = ["std"]
std = ["curve25519-dalek/std"]
